[package]
name = "block_the_square_in_tic_tac_toe"
version = "0.1.0"
authors = ["Hank Lin <fullstackgjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "1.0.0"
